@@ -19,4 +19,4 @@ dnl     append "dev", to distinguish binaries built between releases.
 dnl --------------------------------------------------------
 dnl
 dnl  m4-include this file to define the current ptexenc version
-m4_define([ptexenc_version], [1.3.1])
+m4_define([ptexenc_version], [1.3.2dev])
