@@ -1,3 +1,11 @@
+2013-06-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* version.ac: Update version number 1.3.1 => 1.3.2dev.
+
+2013-06-05  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (*_la_LDFLAGS): Add -bindir for MinGW DLL.
+
 2013-04-05  Karl Berry  <karl@tug.org>
 
 	* version.ac: 1.3.1 to prepare for TL'13 pretest.
